@@ -5,6 +5,8 @@
 - Rewrote SpoonLog so it doesn't use any statics, but requires you to create an instance.
 - Changed method_exists to is_callable throughout the library.
 - When using UTF-8 as charset forms will be forced to submit as UTF-8
+- SpoonLocale: Added getConjunction() and getConjunctions().
+- SpoonFilter::urlise(): Added third optional parameter $language. You can provide this to get language-specific alternatives for the '&' char.
 
 1.3.0 (2011-02-18)
 ----
